--- a/code_ducky/package.json
+++ b/code_ducky/package.json
@@ -7,6 +7,7 @@
     "firebase": "^5.5.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-firebaseui": "^3.1.2",
     "react-scripts": "2.0.4"
   },
   "scripts": {
