--- a/code_ducky/package.json
+++ b/code_ducky/package.json
@@ -8,7 +8,8 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-firebaseui": "^3.1.2",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "react-syntax-highlighter": "^11.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,5 +25,11 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
